--- a/src/styles/ImageList.css
+++ b/src/styles/ImageList.css
@@ -1,4 +1,19 @@
+/* with React ref */
+
 .image-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-gap: 0 10px;
+    grid-auto-rows: 10px;
+}
+
+.image-list img {
+    width: 250px;
+    grid-row-end: span 2;
+}
+
+/* without using React ref */
+/* .image-list {
     line-height: 0;
     column-count: 4;
 }
@@ -7,4 +22,4 @@
     width: 100% !important;
     height: auto !important;
     margin: 0 0 10px 0;
-}
+} */
